err/openedx2zim.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/bash_completion.d'...
Listing './etc/fish'...
Listing './etc/fish/completions'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-0.04.21.dist-info'...
Listing './lib/python3.5/site-packages/awesome_slugify-1.6.5.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/openedx'...
Listing './lib/python3.5/site-packages/openedx/static'...
Listing './lib/python3.5/site-packages/openedx/static/bootstrap'...
Listing './lib/python3.5/site-packages/openedx/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/openedx/static/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/openedx/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/openedx/static/config'...
Listing './lib/python3.5/site-packages/openedx/static/css'...
Listing './lib/python3.5/site-packages/openedx/static/css/font'...
Listing './lib/python3.5/site-packages/openedx/static/fonts'...
Listing './lib/python3.5/site-packages/openedx/static/jax'...
Listing './lib/python3.5/site-packages/openedx/static/jax/output'...
Listing './lib/python3.5/site-packages/openedx/static/jax/output/SVG'...
Listing './lib/python3.5/site-packages/openedx/static/jax/output/SVG/fonts'...
Listing './lib/python3.5/site-packages/openedx/static/jax/output/SVG/fonts/TeX'...
Listing './lib/python3.5/site-packages/openedx/templates'...
Listing './lib/python3.5/site-packages/openedx2zim-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slugify'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/webvtt'...
Listing './lib/python3.5/site-packages/webvtt_py-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/youtube_dl'...
Listing './lib/python3.5/site-packages/youtube_dl/downloader'...
Listing './lib/python3.5/site-packages/youtube_dl/extractor'...
Listing './lib/python3.5/site-packages/youtube_dl/postprocessor'...
Listing './lib/python3.5/site-packages/youtube_dl-2017.12.31.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/youtube_dl'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
